(0616) refactor: 불필요한 코드 제거 및 일부 html 수정

--- a/DevQuest-service/src/main/resources/templates/admin/signup.html
+++ b/DevQuest-service/src/main/resources/templates/admin/signup.html
@@ -120,7 +120,7 @@
   </form>
 
   <div class="login-link">계정이 있으신가요? <a href="/signin">로그인</a></div>
-
+</div>
 <script>
   const validElement = document.querySelector('#emailCheckMsg');
   document.querySelector('#email').addEventListener('focusout', async ev => {
@@ -187,6 +187,5 @@
   });
 
 </script>
-
 </body>
 </html>
