--- a/DevQuest-service/src/main/resources/templates/mypage/mypage.html
+++ b/DevQuest-service/src/main/resources/templates/mypage/mypage.html
@@ -52,9 +52,8 @@
         </div>
     </div>
 
-    <div class="ccmModal" id="achievementListModal">
+    <div class="ccmModal" id="achievementListModal" onclick="outsideModalClick(event)">
         <div class="ccmModal-content">
-            <span class="close" onclick="closeListModal()">×</span>
             <h3>🏅 획득 업적 목록</h3>
             <div id="achievementList">
             </div>
