--- a/DevQuest-service/src/main/resources/static/css/achievement/congratulation.css
+++ b/DevQuest-service/src/main/resources/static/css/achievement/congratulation.css
@@ -16,5 +16,7 @@
     width: 600px;
     border-radius: 10px;
     max-height: 600px;
-    overflow-y: auto;
+    overflow: hidden; /* 내부 둥근 테두리 유지 */
+    display: flex;
+    flex-direction: column;
 }
