(0616) feat: #22 코딩테스트 문제 추천 기능 완성 (1045)

--- a/DevQuest-service/src/main/resources/templates/goal/goal.html
+++ b/DevQuest-service/src/main/resources/templates/goal/goal.html
@@ -15,7 +15,7 @@
   <!--========= 좌측 사이드바 ===========-->
   <aside class="sidebar">
     <div class="logo">
-      <a href="/admin/dashboard">DevQuest</a>
+      <a href="/dashboard">DevQuest</a>
     </div>
     <h1 class="company-name" th:text="${company.companyName}">기업명 로딩 실패</h1>
     <span class="comment" th:text="${company.content}">한마디</span>
