--- a/DevQuest-service/src/main/resources/static/css/achievement/congratulation.css
+++ b/DevQuest-service/src/main/resources/static/css/achievement/congratulation.css
@@ -20,3 +20,10 @@
     display: flex;
     flex-direction: column;
 }
+
+.ccmModal-content h3 {
+    font-size: 24px;
+    font-weight: 700;
+    margin-bottom: 16px;
+    text-align: center;
+}
