(0616) refactor: #14 목표생성/수정 모달 카테고리 셀렉트 css 쉉(1530)

--- a/DevQuest-service/src/main/resources/static/css/goal.css
+++ b/DevQuest-service/src/main/resources/static/css/goal.css
@@ -584,9 +584,13 @@
   }
 
 
-
-
-
+.modal-content select {
+  width: 100%;
+  padding: 0.5rem;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  font-size: 1rem;
+}
 
   .modal-content {
     display: flex;
