--- a/DevQuest-service/src/main/resources/templates/goal/goal.html
+++ b/DevQuest-service/src/main/resources/templates/goal/goal.html
@@ -269,6 +269,14 @@
       <span class="close" id="recommendModalClose">&times;</span>
       <h2>추천 문제 생성</h2>
       <form id="problem-form">
+        <label for="itemsPerPage">한 페이지에 표시할 문제 수:</label>
+        <select id="itemsPerPage">
+          <option value="10" selected>10개</option>
+          <option value="20" >20개</option>
+          <option value="30">30개</option>
+          <option value="40">40개</option>
+          <option value="50">50개</option>
+        </select>
         <input type="hidden" name="goalId" value="">
         <div id="problem-list"></div>
         <button type="submit">추가</button>
