(0616) refactor #29 문제 추천 모달 에서 제목 검색 기능 추가(2131)

--- a/DevQuest-service/src/main/resources/templates/goal/goal.html
+++ b/DevQuest-service/src/main/resources/templates/goal/goal.html
@@ -277,6 +277,8 @@
           <option value="40">40개</option>
           <option value="50">50개</option>
         </select>
+        <input type="text" id="problemSearch" placeholder="문제 제목 검색..." />
+
         <input type="hidden" name="goalId" value="">
         <div id="problem-list"></div>
         <button type="submit">추가</button>
