chore: 문제 추천 기능 js 분리 작업 전 임시 저장(2214)

--- a/DevQuest-service/src/main/resources/templates/goal/goal.html
+++ b/DevQuest-service/src/main/resources/templates/goal/goal.html
@@ -289,13 +289,23 @@
     <div th:replace="~{fragments/achievement-modal :: achievementModal}"></div>
     <div th:replace="~{fragments/levelup-modal.html :: levelUpModal}"></div>
 
-  <script src="/js/goal.js"></script>
+  <script src="/js/goal/goal.js"></script>
 </div>
 </body>
 
+<script src="/js/goal/goal.js"></script>
+
+<script src="/js/goal/modal-handler.js"></script>
+<script src="/js/goal/goal-service.js"></script>
+<script src="/js/goal/todo-service.js"></script>
+<script src="/js/goal/problem-recommend.js"></script>
+<script src="/js/goal/dropdown-handler.js"></script>
+<script src="/js/goal/calendar-handler.js"></script>
+<script src="/js/goal/ai-feedback.js"></script>
+
+
 <script defer src="/js/achievement/congratulation.js"></script>
-<script
-        src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
 <script defer src="/js/level/level.js"></script>
 <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.17/index.global.min.js'></script>
 </html>
