--- a/DevQuest-service/src/main/resources/templates/goal/goal.html
+++ b/DevQuest-service/src/main/resources/templates/goal/goal.html
@@ -138,8 +138,8 @@
             <div class="dropdown" onclick="event.stopPropagation()">
               <button class="dropdown-toggle" type="button"> ⋮  </button>
               <ul class="dropdown-menu">
-                <li class="update-btn" th:attr="data-id=${goal.goalId}">수정</li>
-                <li class="delete-btn" th:attr="data-id=${goal.goalId}">삭제</li>
+                <li class="update-btn" th:attr="data-goal-id=${goal.goalId}">수정</li>
+                <li class="delete-btn" th:attr="data-goal-id=${goal.goalId}">삭제</li>
               </ul>
             </div>
           </div>
@@ -289,20 +289,12 @@
     <div th:replace="~{fragments/achievement-modal :: achievementModal}"></div>
     <div th:replace="~{fragments/levelup-modal.html :: levelUpModal}"></div>
 
-  <script src="/js/goal/goal.js"></script>
+
 </div>
 </body>
 
-<script src="/js/goal/goal.js"></script>
-
-<script src="/js/goal/modal-handler.js"></script>
-<script src="/js/goal/goal-service.js"></script>
-<script src="/js/goal/todo-service.js"></script>
-<script src="/js/goal/problem-recommend.js"></script>
-<script src="/js/goal/dropdown-handler.js"></script>
-<script src="/js/goal/calendar-handler.js"></script>
-<script src="/js/goal/ai-feedback.js"></script>
-
+<script  src="/js/goal/goal-service.js"></script>
+<script  src="/js/goal/goal.js"></script>
 
 <script defer src="/js/achievement/congratulation.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
