(0617) refactor: #29 goal.js 부분 기능별 분리 중 투두 관련 기능 분리 완료(1238)

--- a/DevQuest-service/src/main/resources/templates/goal/goal.html
+++ b/DevQuest-service/src/main/resources/templates/goal/goal.html
@@ -161,15 +161,15 @@
 
               <input type="checkbox"
                      th:checked="${todo.isDone}"
-                     th:attr="data-id=${todo.todoId}"
+                     th:attr="data-todo-id=${todo.todoId}"
                      class="todo-checkbox">
 
               <a class="todo-content" th:href="${todo.url}" th:text="${todo.content}">투두 내용</a>
 
 
               <div class="todo-actions">
-                <button type="button" class="update-todo-btn" th:attr="data-id=${todo.todoId}">수정</button>
-                <button type="button" class="delete-todo-btn" th:attr="data-id=${todo.todoId}">삭제</button>
+                <button type="button" class="update-todo-btn" th:attr="data-todo-id=${todo.todoId}">수정</button>
+                <button type="button" class="delete-todo-btn" th:attr="data-todo-id=${todo.todoId}">삭제</button>
               </div>
             </li>
           </ul>
@@ -294,6 +294,8 @@
 </body>
 
 <script  src="/js/goal/goal-service.js"></script>
+<script  src="/js/goal/todo-service.js"></script>
+<script  src="/js/goal/recommend-problem.js"></script>
 <script  src="/js/goal/goal.js"></script>
 
 <script defer src="/js/achievement/congratulation.js"></script>
