(0617) fix: #29 goal.js 에서 recommend-problem 부분 분리 완료 및 추천 문제 추가 시 문제 두개씩 추가되는 문제 해결 완료(1001)

--- a/DevQuest-service/src/main/resources/templates/goal/goal.html
+++ b/DevQuest-service/src/main/resources/templates/goal/goal.html
@@ -296,6 +296,7 @@
 <script  src="/js/goal/goal-service.js"></script>
 <script  src="/js/goal/todo-service.js"></script>
 <script  src="/js/goal/recommend-problem.js"></script>
+<script  src="/js/goal/full-calendar.js"></script>
 <script  src="/js/goal/goal.js"></script>
 
 <script defer src="/js/achievement/congratulation.js"></script>
