--- a/DevQuest-service/src/main/resources/templates/mypage/mypage.html
+++ b/DevQuest-service/src/main/resources/templates/mypage/mypage.html
@@ -71,5 +71,5 @@
 <script defer src="/js/withdraw.js"></script>
 <script defer src="/js/achievement/mypageAchieve.js"></script>
 <script defer src="/js/achievement/congratulation.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
 </html>
