--- a/DevQuest-service/src/main/resources/templates/dashboard/dashboard.html
+++ b/DevQuest-service/src/main/resources/templates/dashboard/dashboard.html
@@ -412,6 +412,6 @@
   </script>
 </body>
 <script defer src="/js/achievement/congratulation.js"></script>
-<script
-    src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
+
 </html>
