(0617) refactor: #29 추천 문제 목록에서 해결된 문제 포함 체크 박스 기능 구현(1120)

--- a/DevQuest-service/src/main/resources/static/css/goal.css
+++ b/DevQuest-service/src/main/resources/static/css/goal.css
@@ -1015,6 +1015,8 @@ body {
   accent-color: #7e57c2; /* 체크박스 보라색 */
 }
 
+
+
 .pagination button {
   background-color: #e0d4ff;
   color: #4b0082;
@@ -1047,5 +1049,9 @@ body {
   max-width: 150px;
 }
 
+.includeSolved{
+  transform: scale(1.2);
+  accent-color: #7e57c2; /* 체크박스 보라색 */
+}
 
 
