--- a/DevQuest-service/src/main/resources/templates/goal/goal.html
+++ b/DevQuest-service/src/main/resources/templates/goal/goal.html
@@ -276,7 +276,9 @@
           <option value="30">30개</option>
           <option value="40">40개</option>
           <option value="50">50개</option>
-        </select>
+        </select><br>
+        <label >해결된 문제 포함하기 : </label>
+        <input type="checkbox" id="includeSolved"><br>
         <input type="text" id="problemSearch" placeholder="문제 제목 검색..." />
 
         <input type="hidden" name="goalId" value="">
