(0617) feat: 업적 업데이트 #17 #25

--- a/DevQuest-service/src/main/resources/static/css/achievement/congratulation.css
+++ b/DevQuest-service/src/main/resources/static/css/achievement/congratulation.css
@@ -27,3 +27,16 @@
     margin-bottom: 16px;
     text-align: center;
 }
+
+#achievementCongratsModal {
+    display: none;
+    opacity: 0;
+    transition: opacity 0.5s ease;
+    pointer-events: none;
+}
+
+#achievementCongratsModal.active {
+    display: block;
+    opacity: 1;
+    pointer-events: auto;
+}
