--- a/DevQuest-service/src/main/resources/templates/goal/goal.html
+++ b/DevQuest-service/src/main/resources/templates/goal/goal.html
@@ -290,9 +290,9 @@
     <div th:replace="~{fragments/levelup-modal.html :: levelUpModal}"></div>
 
 
+    <script src="/js/achievement/mypageAchieve.js"></script>
 </div>
 </body>
-
 <script  src="/js/goal/goal-service.js"></script>
 <script  src="/js/goal/todo-service.js"></script>
 <script  src="/js/goal/recommend-problem.js"></script>
