--- a/DevQuest-service/src/main/resources/templates/mypage/mypage.html
+++ b/DevQuest-service/src/main/resources/templates/mypage/mypage.html
@@ -57,6 +57,13 @@
             </div>
         </div>
     </div>
+    <div class="ccmModal" id="achievementDetailModal" onclick="closeDetailModalOutside(event)" style="display:none;">
+        <div class="ccmModal-content">
+            <h4 id="detailTitle">업적 제목</h4>
+            <p id="detailDescription">업적 상세 설명</p>
+        </div>
+    </div>
+
     <div class="edit" onclick="location.href='/member/update'">수정하기</div>
 </div>
 
