(0617) WIP: #29 임시 저장(1235)

--- a/DevQuest-service/src/main/resources/static/css/goal.css
+++ b/DevQuest-service/src/main/resources/static/css/goal.css
@@ -1078,4 +1078,11 @@ body {
   font-weight: bold;
 }
 
+.problem-table td a {
+  text-decoration: none;
+  color: inherit;
+}
+.problem-table td a:hover {
+  background-color: #f3e5f5;
+}
 
