--- a/DevQuest-service/src/main/resources/templates/goal/goal.html
+++ b/DevQuest-service/src/main/resources/templates/goal/goal.html
@@ -164,7 +164,7 @@
                      th:attr="data-todo-id=${todo.todoId}"
                      class="todo-checkbox">
 
-              <a class="todo-content" th:href="${todo.url}" th:text="${todo.content}">투두 내용</a>
+              <a class="todo-content" th:href="${todo.url}" target="_blank" th:text="${todo.content}">투두 내용</a>
 
 
               <div class="todo-actions">
@@ -276,10 +276,12 @@
           <option value="30">30개</option>
           <option value="40">40개</option>
           <option value="50">50개</option>
+          <option value="100">100개</option>
+          <option value="1000">1000개</option>
         </select><br>
         <label >해결된 문제 포함하기 : </label>
-        <input type="checkbox" id="includeSolved" class="custom-checkbox"><br>
-        <input type="text" id="problemSearch" placeholder="문제 제목 검색..." />
+        <input type="checkbox" id="includeSolved" class="custom-checkbox"><br><br>
+        <input type="text" id="problemSearch" placeholder="문제 제목 검색..." /><br><br>
 
         <input type="hidden" name="goalId" value="">
         <div id="problem-list"></div>
