--- a/DevQuest-service/src/main/resources/templates/admin/member-management.html
+++ b/DevQuest-service/src/main/resources/templates/admin/member-management.html
@@ -9,31 +9,18 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <!--css-->
   <link rel="stylesheet" href="/css/common.css">
-  <link rel="stylesheet" href="/css/header.css">
+  <link rel="stylesheet" href="/css/admin/header.css">
   <link rel="stylesheet" href="/css/admin/adminDashboard.css">
+  
 </head>
 <body>
-<div class="logo">
-  <a href="/admin/dashboard">DevQuest</a>
-</div>
-
 <div th:replace="~{fragments/header :: header}"></div>
 <div th:replace="~{fragments/admin-sidenav :: sidenav}"></div>
 
-<!--sidenav-->
-<nav class="top-bar">
-  <div class="nav-wrapper">
-    <div class="nav-container">
-      <a href="#" data-target="slide-out" class="sidenav-trigger show-on-large">
-        <i class="material-icons material-icons-menu">menu</i>
-      </a>
-    </div>
-  </div>
-</nav>
-
 <main>
-  <h2><b th:text="${nickname} + ' 관리자님, 안녕하세요!'"></b></h2>
+  <h2 style="font-size: 1.5rem; margin-bottom: 1.5rem;"><b th:text="${nickname} + ' 관리자님, 반갑습니다!'"></b></h2>
 
   <div class="container">
     <h2 class="member-title">
@@ -171,7 +158,14 @@
 <script>
   document.addEventListener('DOMContentLoaded', function () {
     const elems = document.querySelectorAll('.sidenav');
-    M.Sidenav.init(elems);
+    M.Sidenav.init(elems, {
+      onOpenStart: function() {
+        document.querySelector('.top-header').style.display = 'none';
+      },
+      onCloseEnd: function() {
+        document.querySelector('.top-header').style.display = '';
+      }
+    });
   });
 </script>
 
