--- a/DevQuest-service/src/main/resources/templates/goal/goal.html
+++ b/DevQuest-service/src/main/resources/templates/goal/goal.html
@@ -51,7 +51,7 @@
     <!-------------------------------------------------------------------------------------------->
     <!--AI 데브-->
     <!-- 모달 여는 버튼 -->
-    <button id="openChatBtn">AI데브 와 대화하기</button>
+    <button id="openChatBtn">AI데브 대화하기</button>
 
     <!-- 챗봇 모달 -->
     <div id="chatModal" class="chat-modal">
@@ -64,6 +64,7 @@
           </div>
           <div id="chatHistory" class="chat-history"></div> <!--대화목록-->
 
+            <button id="togglePersonalityBtn"> 매운맛 AI</button>
           <div class="chat-input-wrapper">
             <input type="text" id="userMessageInput" placeholder="AI 데브에게 말해봐!" />
             <div class="reaction">
