--- a/DevQuest-service/src/main/resources/templates/goal/goal.html
+++ b/DevQuest-service/src/main/resources/templates/goal/goal.html
@@ -64,7 +64,34 @@
           </div>
           <div id="chatHistory" class="chat-history"></div> <!--대화목록-->
 
-            <button id="togglePersonalityBtn"> 매운맛 AI</button>
+            <button id="togglePersonalityBtn"> MBTI 설정하기</button> <!--성격 설정 버튼-->
+
+          <div id="personalityModal" class="personality-modal">
+            <div class="personality-grid">
+              <button class="personality-option">INTJ</button>
+              <button class="personality-option">INFP</button>
+              <button class="personality-option">ENTP</button>
+              <button class="personality-option">ESFJ</button>
+              <button class="personality-option">ISTP</button>
+              <button class="personality-option">ENFP</button>
+              <button class="personality-option">ISFJ</button>
+              <button class="personality-option">ESTJ</button>
+              <button class="personality-option">ISTJ</button>
+              <button class="personality-option">INFJ</button>
+              <button class="personality-option">ENFJ</button>
+              <button class="personality-option">ESTP</button>
+              <button class="personality-option">INTP</button>
+              <button class="personality-option">ISFP</button>
+              <button class="personality-option">ESFP</button>
+              <button class="personality-option">ENTJ</button>
+            </div>
+            <div class="spice-options">
+              <button class="personality-option">순한맛</button>
+              <button class="personality-option">매운맛</button>
+            </div>
+          </div>
+
+
           <div class="chat-input-wrapper">
             <input type="text" id="userMessageInput" placeholder="AI 데브에게 말해봐!" />
             <div class="reaction">
